--- a/Projects.html
+++ b/Projects.html
@@ -76,6 +76,8 @@
        inkscape:connector-curvature="0" />
   </g>
 </svg>
+<canvas id="myCanvas" width="200" height="100" style="border:20px solid #FFFFCC;">
+
 
 </body>
 
